[package]
name = "apple_music_presence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-presence = "1.2.0"
serde = "1.0.202"
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
